change nav paths

--- a/index.html
+++ b/index.html
@@ -50,21 +50,9 @@
                         <img class="logosvg" src="./asset/id/xentoicon.png" alt="Xento" height="75px"/>
                     </a>
                     <ul class="navbar-nav d-flex justify-content-end logo-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../about">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../portfolio">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../services">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../contact">Link</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../">HOME</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -79,13 +67,9 @@
                     &#9776;
                 </button>
                 <div id="myNav" class="overlay">
-                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
                     <div class="overlay-content text-center">
                         <a href="../">HOME</a>
-                        <a href="./about">Link</a>
-                        <a href="./portfolio">Link</a>
-                        <a href="./services">Link</a>
-                        <a href="./contact">Link</a>
                     </div>
                 </div>
             </nav>
