--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Fonts -->
-        <link SameSite="None Secure" rel="stylesheet" href="https://use.typekit.net/del7grk.css">
+        <!-- You can link to things like Google fonts here! -->
 
         <!-- Bootstrap -->
+        <!-- Bootstrap is one of the world's most popular CSS frameworks, this is used to set styles for you and make responsive design simple, try it out in this site, it makes a big difference to the speed of site development -->
         <link SameSite="None Secure" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <script SameSite="None Secure" src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script SameSite="None Secure" src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
         <!-- CSS -->
+        <!-- This code connects you to the stylesheet 'style.css' this is where all the custom styling code is written, this is external so it can be cached for other pages and ensure fast load times across your site when you add new pages -->
         <link rel="stylesheet" type="text/css" href="style.css"/>
 
         <!-- Favicons -->
+        <!-- Favicons are the small image icons that show up alongside the site title on your tab, you can generate these at https://favicon.io -->
         <link rel="apple-touch-icon" sizes="180x180" SameSite="Strict" href="./asset/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" SameSite="Strict" href="./asset/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" SameSite="Strict" href="./asset/favicon/favicon-16x16.png">
