better commenting and removal of sensitive code

--- a/index.html
+++ b/index.html
@@ -21,20 +21,22 @@
 
         <!-- Favicons -->
         <!-- Favicons are the small image icons that show up alongside the site title on your tab, you can generate these at https://favicon.io -->
-        <link rel="apple-touch-icon" sizes="180x180" SameSite="Strict" href="./asset/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" SameSite="Strict" href="./asset/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" SameSite="Strict" href="./asset/favicon/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" SameSite="Strict" href="/asset/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" SameSite="Strict" href="/asset/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" SameSite="Strict" href="/asset/favicon/favicon-16x16.png">
         <link rel="manifest" href="site.webmanifest">
 
+        <!-- This is the site meta data that is displayed in embeds on platforms like Discord when the site is linked! -->
         <!-- Open Graph tags -->
         <meta property="og:title" content="Xento"/>
         <meta property="og:description" content="Learn to code with the greatest guide in the game. Try Xento today!"/>
-        <meta property="og:image" SameSite="Strict" content="https://xento.xyz/asset/og/homeog.png"/>
+        <meta property="og:image" SameSite="Strict" content="https://mysite.com/asset/og/homeog.png"/>
         <meta property="og:site_name" content="Xento"/>
-        <meta name="og:url" SameSite="Strict" content="https://xento.xyz/">
+        <meta name="og:url" SameSite="Strict" content="https://mysite.com/">
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:image" SameSite="Strict" content="https://xento.xyz/asset/og/homeog.png" />
+        <meta property="twitter:image" SameSite="Strict" content="https://mysite.com/asset/og/homeog.png" />
         <meta property="twitter:site" content="Xento" />
+        <!-- Theme colour allows you to change the accent colour to the embed on some platforms! -->
         <meta name="theme-color" content="#1f2439">
 
         <title>Learn to code | Xento</title>
