--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <!-- Theme colour allows you to change the accent colour to the embed on some platforms! -->
         <meta name="theme-color" content="#1f2439">
 
-        <title>Learn to code | Xento</title>
+        <!-- This is the site meta data used for SEO and other useful things, like displaying the site name in your browser! -->
+        <title>Learn to code | Xento</title> <!-- This is the site title, change it to your site's name! -->
         <meta name="description" content="Learn to code with the greatest guide in the game. Try Xento today!">
         <meta name="keywords" content="Code, Coding, Xento, Learn to code, Programming, Technology, Computing">
         <meta name="author" content="Matt Davison">
@@ -47,26 +48,29 @@
     </head>
 
     <body>
-        <!-- navbar and header -->
+        <!-- This is the navbar, there are two sections for this, one has the desktop navbar and the other has the mobile navbar, you can update the links within this by changing the <a></a> tags! -->
+        <!-- This is the desktop navbar -->
         <div class="justify-content-center d-none d-sm-none d-md-block d-lg-block d-xl-block noSidePadding">
             <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-nav justify-content-center d-none d-sm-none d-md-block d-lg-block d-xl-block nav-padding align-items-center">
                 <div class="container align-items-center">
-                    <a class="navbar-brand" href="../">
-                        <img class="logosvg" src="./asset/id/xentoicon.png" alt="Xento" height="75px"/>
+                    <a class="navbar-brand" href="/">
+                        <!-- This code links to the logo image, you can change the path here and install a new image in your project. -->
+                        <img class="logosvg" src="/asset/id/xentoicon.png" alt="Xento" height="75px"/>
                     </a>
                     <ul class="navbar-nav d-flex justify-content-end logo-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="../">HOME</a>
+                            <a class="nav-link" href="/">HOME</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </div>
-
+        <!-- This is the mobile navbar! -->
         <div class="noSidePadding d-block d-sm-block d-md-none d-lg-none d-xl-none">
             <nav class="navbar navbar-expand-sm bg-nav fixed-top navbar-light nav-padding">
                 <a class="navbar-brand" href="../">
-                    <img src="./asset/id/xentoicon.png" alt="Xento" height="50px"/>
+                    <!-- This code links to the logo image, you can change the path here and install a new image in your project. -->
+                    <img src="/asset/id/xentoicon.png" alt="Xento" height="50px"/>
                 </a>
                 <button class="navbar-toggle justify-self-end" type="button" onclick="openNav()">
                     &#9776;
@@ -84,7 +88,8 @@
             <div class="container-fluid text-center align-items-center">
                 <div class="row header-content my-auto d-flex">
                     <div class="my-auto">
-                            <img class="header-image" src="./asset/id/xentowordmark.png">
+                            <!-- This code links to the logo wordmark, you can change the path here and install a new image in your project. -->
+                            <img class="header-image" src="/asset/id/xentowordmark.png">
                         <h1 class="header-text">Learn to Code</h1>
                     </div>
                 </div>
@@ -103,12 +108,13 @@
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <img class="card-image" src="./asset/image/xento-one.webp">                           
+                            <!-- This code declares the first image, this repeats throughout the code for other images within the template -->
+                            <img class="card-image" src="/asset/image/xento-one.webp">                           
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <img class="card-image" src="./asset/image/xento-two.webp">                          
+                            <img class="card-image" src="/asset/image/xento-two.webp">                          
                         </div>
                     </div>
                     <div class="card">
@@ -142,14 +148,17 @@
                 </div>
             </div>
         </div>
+        <!-- This is the site footer, this is where you should link to all your pages across the internet, it is not mandatory but would be appreciated if you keep our github link in here! (https://github.com/xentoproject) -->
         <footer class="container-fluid py-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md">
-                        <a href="../"><img src="./asset/id/xentowordmark.png" alt="xento wordmark logo" width="125px"/></a>
+                        <!-- This code links to the logo wordmark, you can change the path here and install a new image in your project. This also acts as a home link. -->
+                        <a href="../"><img src="/asset/id/xentowordmark.png" alt="xento wordmark logo" width="125px"/></a>
                     <small class="d-block mt-3 mb-3">© Xento Project | 2022</small>
                     </div>
                     <div class="col-12 col-md first-footer-group">
+                    <!-- This is a footer link list -->
                     <h5>Null</h5>
                     <ul class="list-unstyled text-small">
                         <li class="footer-link-item"><a class="footer-link" href="">Null</a></li>
@@ -157,6 +166,7 @@
                     </ul>
                     </div>
                     <div class="col-12 col-md">
+                    <!-- This is a footer link list -->
                     <h5>Null</h5>
                     <ul class="list-unstyled text-small">
                         <li class="footer-link-item"><a class="footer-link" href="">Null</a></li>
@@ -164,6 +174,7 @@
                     </ul>
                     </div>
                     <div class="col-12 col-md">
+                    <!-- This is a footer link list -->
                     <h5>Null</h5>
                     <ul class="list-unstyled text-small">
                         <li class="footer-link-item"><a class="footer-link" href="">Null</a></li>
@@ -171,6 +182,7 @@
                     </ul>
                     </div>
                     <div class="col-12 col-md">
+                    <!-- This is a footer link list -->
                     <h5>Null</h5>
                     <ul class="list-unstyled text-small">
                         <li class="footer-link-item"><a class="footer-link" href="">Null</a></li>
@@ -178,6 +190,7 @@
                     </ul>
                     </div>
                 </div>
+                <!-- This is the icon row, you can copy other icons from https://simpleicons.org -->
                 <div class="row justify-content-center">
                     <!-- GitHub -->
                     <a href="https://github.com/xentoproject" target="_blank"><svg class="footer-social-icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg></a>
