--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- This website was written by Matt from Spectre (https://spectrebot.net) for the Xento project, the source code is available to all to use and is made with the intention of teaching the fundamentals of web development! -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
