--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <div class="container-fluid main-content">
             <div class="container">
                 <div class="card-deck align-items-center">
+                    <!-- Row One -->
                     <div class="card">
                         <div class="card-body">
                             <h2 class="card-title">Learn code while writing it</h2>
@@ -114,6 +115,7 @@
                             <img class="card-image" src="/asset/image/xento-one.webp">                           
                         </div>
                     </div>
+                    <!-- Row Two -->
                     <div class="card">
                         <div class="card-body">
                             <img class="card-image" src="/asset/image/xento-two.webp">                          
@@ -125,6 +127,7 @@
                             <p class="card-text">Learn at your own pace and take the time you need to fully understand each language you choose to learn.</p>             
                         </div>
                     </div>
+                    <!-- Row Three -->
                     <div class="card">
                         <div class="card-body">
                             <h2 class="card-title">Bring code to life</h2>
@@ -136,6 +139,7 @@
                             <img class="card-image" src="./asset/image/xento-three.webp">                           
                         </div>
                     </div>
+                    <!-- Row Four -->
                     <div class="card">
                         <div class="card-body">
                             <img class="card-image" src="./asset/image/xento-four.webp">                          
@@ -200,7 +204,7 @@
             </div>
         </footer>
 
-        <!-- JS -->
+        <!-- JS - This links to the Javascript used to open and close the navbar for mobile users -->
         <script src="script.js"></script>
     </body>
 </html>
